--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "tests": "cypress open",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,6 +16,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "cypress": "^12.14.0",
     "jest": "^29.5.0"
   }
 }
